# prod-2025-final-ind

solution/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml
solution/.cargo/: config.toml
solution/.sqlx/: query-046c4fc61571f6cc38627dac689b6afe62da4712228a7aaecc0c319bcca6a46f.json  query-06fe1199e886e28cff7bd1d2d7e2e56820ad812724773325fa7f4280ed7fa0bf.json  query-0cb476abc9eb3ddaa9c848012e268db6e75c07a4744c7c1dc1fcb28293344144.json  query-1699d2524dcf98b655024bd6922e0107fdd63072fe80b009919fadec0af8f930.json  query-19b8dfe0af3b948ad7b5a22447fff0af252b8f40f9d8819e802c1bafc9491dfe.json  query-1f4c518acb4dadc0506e35563c6d12b5853308cca257b9c8651885a9589d05c3.json  query-20cdccbbe5519c62b6260ce418ef0bcb1553b1fd0487286329c2c9720f9ab706.json  query-2170e6b5ec03a7c683498bb74e614dc36c06c158ccc681f1c6d1cd1d75a1430b.json  query-29584cee057abe727d75bd16a103e4d5dee544f012676afba2116e7d3670614d.json  query-2e0d72dae382a2f05aa55fafe05d090214c210f1e170ab465ed62c5204249138.json  query-3d278b868e5e9c0435b743aa05186fb9a06f022263ea9ac32588ce4d8677cc29.json  query-4044b86b659a7f07c94f5f9a4a8fa33ae8d79733c9bdf1d7b863300b1914ef54.json  query-52c5a9bf3b027009377cddaa29881e6c25950b30439ad57ec0905d023fbe4dfa.json  query-557f907e4299b72bc1f134f3bb6e88402a74ca1d94bf1e0763aeab36e0293689.json  query-55ed76deac90ec9a802fcd213fdff0dbf30f6eb49b9eab50e6048424cea2cb3b.json  query-5c365bdc2c9764bc6ae4600ed9711f0f494490f0ed486b718ce0964d176cc8bd.json  query-5e5192a5671efebfd4149a9bce4729d3b742c8cbd25424454592b4d0ea57d19b.json  query-699fb37a544378b6e0055eb763fb3d91a6e01bc01932b6510e2cf1afd76cf4ea.json  query-74a3e28b78a3eff02f4977612ed2dd5a100f36cc1269f73920886dda17576292.json  query-75bdbb3183e4d1699a99b27a6bb15bc240304297d55e9cd362facf81d6b74336.json  query-7915100bb96762857d18fe03b3227f5f357cffe6545a37b1c080546c0ce91dab.json  query-7e65ab579c6d34e47b87dd9cad6028f2d495cd305b75ee67360dc66a1a95c345.json  query-7eee9e6f4c22feff2531501e1b202e0192a8e079af8f3c808babc2b578902f9f.json  query-8c4369a9457c36639abd5dc89062fe65691baffaaa7df62e546aa5d065cb9a08.json  query-91585b46e42381b898afb4292ea7ba7aaae36dca573a23362aa63cfb32d7886f.json  (+16 more)
solution/docs/: openapi.yaml
solution/src/: db.rs  errors.rs  lib.rs  (+4 more)
(+74 files in other folders)
