[package]
name = "solution"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-macros = "0.5.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rust-argon2 = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.13.1", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true

