[package]
name = "solution"
version = "0.1.0"
edition = "2021"

[[test]]
name = "main"
harness = false

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart"] }
axum-macros = "0.5.0"
bytes = "1.10.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
once_cell = "1.20.3"
redis = { version = "0.29.0", features = ["tokio-comp"] }
regex = "1.11.1"
reqwest = "0.12.12"
minio = { git = "https://github.com/minio/minio-rs", version = "0.2.0-alpha", rev = "b19513c90fa44724c4bd0ce328a0509c91652fae" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "non_strict_integers", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
http-body-util = "0.1.2"
mime = "0.3.17"
futures-core = "0.3.31"

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3.17"
testcontainers = "0.23.2"
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true

